--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-calendar-picker": "^8.0.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-maps": "1.14.0",
     "react-native-navigation": "^7.40.1",
     "react-native-pager-view": "6.3.0",
